objects/csordtelcoa__Orders_Subscriptions_Options__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>UPC_Opportunity_TPV_Pending_Stage_Name__c</fullName>
        <defaultValue>&quot;Closed - TPV pending&quot;</defaultValue>
        <description>Holds the Stage Name of the Opportunity for TPV Pending Orders</description>
        <label>Opportunity TPV Pending Stage Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Order_TPV_Withdrawal_Status__c</fullName>
        <defaultValue>&quot;Withdrawal&quot;</defaultValue>
        <description>Holds the value that is going to be stamped on the Order Status field, once the order is TPV withdrawn</description>
        <label>Order TPV Withdrawal Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Activated_Status__c</fullName>
        <defaultValue>&quot;Active&quot;</defaultValue>
        <description>Holds the value that is going to be stamped on Service Status field, once the same gets activated.</description>
        <label>Service Activated Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Canceled_Status__c</fullName>
        <defaultValue>&quot;Canceled&quot;</defaultValue>
        <description>Holds the value that is going to be stamped on Service Status field, once the same gets canceled.</description>
        <label>Service Canceled Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Initial_Termination_Status__c</fullName>
        <defaultValue>&quot;In Termination&quot;</defaultValue>
        <label>Service Initial Termination Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Terminated_Status__c</fullName>
        <defaultValue>&quot;Terminated&quot;</defaultValue>
        <label>Service Terminated Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Sub_Initial_Termination_Status__c</fullName>
        <defaultValue>&quot;In Termination&quot;</defaultValue>
        <label>Subscription Initial Termination Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Subscription_Canceled_Status__c</fullName>
        <defaultValue>&quot;Canceled&quot;</defaultValue>
        <description>Holds the value that is going to be stamped on the Subscription Status, once the same is canceled.</description>
        <label>Subscription Canceled Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Subscription_Terminated_Status__c</fullName>
        <defaultValue>&quot;Terminated&quot;</defaultValue>
        <label>Subscription Terminated Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Basket_Linked_To_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basket Linked To Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Batch_Size__c</fullName>
        <defaultValue>100</defaultValue>
        <description>The number of product configurations that is processed in a single batch of a single order generation job (if batch mode is used)</description>
        <inlineHelpText>The number of product configurations that is processed in a single batch of a single order generation job (if batch mode is used)</inlineHelpText>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Create_Mac_Baskets_Button_Label__c</fullName>
        <defaultValue>&quot;Create MAC Basket&quot;</defaultValue>
        <label>Create Mac Baskets Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Create_Mac_Baskets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Mac Baskets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Create_Mac_Opportunities_Button_Label__c</fullName>
        <defaultValue>&quot;Create MAC Opportunity&quot;</defaultValue>
        <label>Create Mac Opportunities Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Create_Mac_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Mac Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Deliverable_Initial_State__c</fullName>
        <label>Deliverable Initial State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Deliverable_Number_Prefix__c</fullName>
        <defaultValue>&quot;DLV-&quot;</defaultValue>
        <label>Deliverable Number Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Disable_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Enforce_Synchronisation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enforce Synchronisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Generate_Delta_On_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Delta On Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Generate_Inflight_Change_Delta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Inflight Change Delta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Generate_Orders_From_Basket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Orders From Basket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Generate_Orders_From_Bundle__c</fullName>
        <defaultValue>true</defaultValue>
        <description>&quot;Generate Orders from Basket&quot; overrides &quot;Generate Orders from Bundle&quot;</description>
        <inlineHelpText>&quot;Generate Orders from Basket&quot; overrides &quot;Generate Orders from Bundle&quot;</inlineHelpText>
        <label>Generate Orders From Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Inflight_Batch_Size__c</fullName>
        <defaultValue>10</defaultValue>
        <description>The number of product configurations that is processed in a single batch of a single apply inflight change job (if batch mode is used)</description>
        <inlineHelpText>The number of product configurations that is processed in a single batch of a single apply inflight change job (if batch mode is used)</inlineHelpText>
        <label>Inflight Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Initial_Mac_Opportunity_Stage__c</fullName>
        <defaultValue>&quot;Prospecting&quot;</defaultValue>
        <label>Initial Mac Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Initiate_order_generation_manually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, order generation will not be triggered automatically by the module</description>
        <inlineHelpText>If checked, order generation will not be triggered automatically by the module</inlineHelpText>
        <label>Initiate order generation manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__MACD_Opportunity_Record_Types__c</fullName>
        <inlineHelpText>Comma separated list of record types that can be used in a MACD process. If empty, all record types are used. Valid only if &apos;Use MACD Opportunity Record Types&apos; setting is set.</inlineHelpText>
        <label>MACD Opportunity Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Module_Debug_Prefix__c</fullName>
        <label>Order Generation Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Module_Name__c</fullName>
        <defaultValue>&quot;CS Order Implementation Module Telco A&quot;</defaultValue>
        <label>Module Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Module_Version_Number__c</fullName>
        <defaultValue>&quot;1.0&quot;</defaultValue>
        <label>Module Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Opportunity_Stages_creating_orders__c</fullName>
        <defaultValue>&quot;Closed Won&quot;</defaultValue>
        <description>A comma separated list of opportunity stages which when set will trigger the creation of orders. It defaults to &quot;Closed Won&quot; if no value is entered</description>
        <inlineHelpText>A comma separated list of opportunity stages which when set will trigger the creation of orders. It defaults to &quot;Closed Won&quot; if no value is entered</inlineHelpText>
        <label>Opportunity Stages creating orders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Order_Initial_State__c</fullName>
        <defaultValue>&quot;Order Submitted&quot;</defaultValue>
        <label>Order Initial State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Order_Product_Initial_State__c</fullName>
        <label>Order Product Initial State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replacement_Subscription_Delivered_State__c</fullName>
        <inlineHelpText>Default is &quot;Delivered&quot;</inlineHelpText>
        <label>Replacement Subscription Delivered State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Revalidate_Cloned_Product_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If product configuration should be revalidated immediately, select this. Important: Revalidation is occurring in a batch. If you are cloning product configurations in a batch, you must uncheck this field.</description>
        <inlineHelpText>Revalidation is a process of re-running the defined rules on a cloned product configuration. Since it is a costly process, it is run in a batch. You can select for it to run immediately (checked) or leave it for a later time (unchecked).</inlineHelpText>
        <label>Revalidate Cloned Product Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Service_Final_States__c</fullName>
        <description>Comma separated list of final statuses.</description>
        <inlineHelpText>Comma separated list of statuses - once a service reaches one of these statuses, system should not change it since it is listed as final.</inlineHelpText>
        <label>Service Final States</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Service_Initial_State__c</fullName>
        <defaultValue>&quot;Service created&quot;</defaultValue>
        <label>Service Initial State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Service_Number_Prefix__c</fullName>
        <defaultValue>&quot;SVC-&quot;</defaultValue>
        <label>Service Number Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Statuses_Not_Allowing_Change__c</fullName>
        <description>Comma separated list of Subscription statuses not allowing change requests</description>
        <inlineHelpText>Comma separated list of Subscription statuses not allowing change requests</inlineHelpText>
        <label>Statuses Not Allowing Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Statuses_Not_Allowing_In_Flight_Change__c</fullName>
        <description>Comma separated list of service statuses where In Flight change is not allowed</description>
        <inlineHelpText>Comma separated list of service statuses where In Flight change is not allowed</inlineHelpText>
        <label>Statuses Not Allowing In Flight Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Appending_Not_Allowed__c</fullName>
        <inlineHelpText>Comma separated list of opportunity stages where appending of additional subscriptions to opportunity is not possible. If left empty, it&apos;s disregarded.</inlineHelpText>
        <label>Subscription Appending Not Allowed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Closed_Replaced_State__c</fullName>
        <inlineHelpText>Default &quot;Closed Replaced&quot;</inlineHelpText>
        <label>Subscription Closed Replaced State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Initial_State__c</fullName>
        <defaultValue>&quot;Subscription created&quot;</defaultValue>
        <label>Subscription Initial State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Number_Prefix__c</fullName>
        <defaultValue>&quot;SN-&quot;</defaultValue>
        <label>Subscription Number Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Use_Batch_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Batch Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Use_Opportunity_Record_Types__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this field to enable record type selection when creating a new MACD opportunity</inlineHelpText>
        <label>Use Opportunity Record Types</label>
        <type>Checkbox</type>
    </fields>
    <label>Orders &amp; Subscriptions Options</label>
</CustomObject>